hw2_add_controller_and_mappers